tests/machine/x/fs/string_index.fs
// Generated by Mochi compiler v0.10.26 on 2025-07-16T16:28:30Z
open System

let s: string = "mochi"
printfn "%s" (s.[1])
